--- a/themesource/conversationalui/web/abstracts/_helpers.scss
+++ b/themesource/conversationalui/web/abstracts/_helpers.scss
@@ -34,6 +34,10 @@
   margin-bottom: $spacing-medium;
 }
 
+.spacing-outer-top-smaller {
+  margin-top: $spacing-smaller;
+}
+
 .flexbox-space-between {
   display: flex !important;
   justify-content: space-between;
