--- a/themesource/conversationalui/web/components/_inputs.scss
+++ b/themesource/conversationalui/web/components/_inputs.scss
@@ -35,10 +35,19 @@
     display: flex;
     flex-grow: 1;
     .mx-image {
-        height: $font-size-default;
+        height: $font-size-large;
         margin-right: $spacing-small;
         margin-left: auto;
         float: right;
+    }
+}
+
+//Prompt Management custom height - small
+.combobox-selection-height-small {
+    .widget-combobox-input-container {
+        align-items: center;
+        justify-content: center;
+        height: 32px !important;
     }
 }
 
@@ -51,7 +60,7 @@
         height: max-content;
     }
     .mx-image {
-        height: $font-size-default;
+        height: $font-size-large;
         margin-right: $spacing-small;
     }
 }
